package com.chucknorris.common.domain.models;

public record ChuckNorrisResponse(String id, String value) {
}
