package com.chucknorris.jokes.controller;

import com.chucknorris.auth.service.AuthService;
import com.chucknorris.auth.service.AuthServiceImpl;
import com.chucknorris.common.controller.BaseController;
import com.chucknorris.jokes.models.dto.CreateJokeDto;
import com.chucknorris.jokes.models.dto.JokeDto;
import com.chucknorris.jokes.models.dto.SourceJokeDto;
import com.chucknorris.jokes.service.JokeService;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

@RestController
@RequestMapping("/api/v1")
public class JokeController extends BaseController {

    private final JokeService jokeService;

    public JokeController(JokeService jokeService, AuthService authService) {
        super(authService);
        this.jokeService = jokeService;
    }

    @GetMapping("/jokes")
    public ResponseEntity<JokeDto> getRandomJoke() {
        return executeUnauthenticated(jokeService::getRandomJoke);
    }

    @PostMapping("/jokes")
    public ResponseEntity<JokeDto> createJoke(@RequestBody CreateJokeDto input) {
        return executeAuthenticated(() -> jokeService.createJoke(input));
    }

    @GetMapping("/source-joke")
    public ResponseEntity<SourceJokeDto> getRandomSourceJoke() {
        return executeAuthenticated(jokeService::getRandomSourceJoke);
    }
}
