package com.chucknorris.jokes.models;

public record SourceJokeDto(String externalId, String content) {
}
